@@ -1,3 +1,7 @@
+2004-11-07  Mark Wielaard  <mark@klomp.org>
+
+	* java/awt/image/LookupOp.java: Comments and indentation fixes.
+
 2004-11-07  Jerry Quinn  <jlquinn@optonline.net>
 
 	* java/awt/Checkbox.java (AccessibleAWTCheckBox): Implement.
